--- a/Project8/Project8/Areas/Admin/Views/Home/AddAuthor.cshtml
+++ b/Project8/Project8/Areas/Admin/Views/Home/AddAuthor.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-control" type="date" name="DateOfBirth" />
+                <input class="form-control" type="datetime" name="DateOfBirth" />
                 @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfDeath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-control" type="date" name="DateOfDeath" />
+                <input class="form-control" type="datetime" name="DateOfDeath" />
                 @Html.ValidationMessageFor(model => model.DateOfDeath, "", new { @class = "text-danger" })
             </div>
         </div>
