--- a/Project8/Project8/Views/Home/Index.cshtml
+++ b/Project8/Project8/Views/Home/Index.cshtml
@@ -21,17 +21,17 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <a href="/Book/Details/8">
-                                <img src="~/images/combo1.jpg" alt="slideImage1" />
+                                <img src="~/images/background1.jpg" alt="slideImage1" />
                             </a>
                         </div>
                         <div class="item">
                             <a href="/Book/Details/9">
-                                <img src="~/images/combo2.jpg" alt="sildeImage2" />
+                                <img src="~/images/background2.jpg" alt="sildeImage2" />
                             </a>
                         </div>
                         <div class="item">
                             <a href="/Book/Details/10">
-                                <img src="~/images/combo3.jpg" alt="slideImage3" />
+                                <img src="~/images/background3.jpg" alt="slideImage3" />
                             </a>
                         </div>
                     </div>
