--- a/Project8/Project8/Views/Shared/_Layout.cshtml
+++ b/Project8/Project8/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <!-- Start of HubSpot Embed Code -->
     <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8722341.js"></script>
     <!-- End of HubSpot Embed Code -->
-    <nav style="background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);border-radius: 0px 0px 30px 30px;border:none" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav style="background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);border-radius: 0px 0px 30px 30px;border:none" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/" style="font-size:25px; color:#525151;"><i class="fa fa-home" aria-hidden="true"></i> FPTBookstore</a>
+                        <a href="/" style="font-size:25px; color:#525151;"><i class="fa fa-book" aria-hidden="true"></i> FPTBookstore</a>
                         
                         
                     </li>
@@ -60,7 +60,7 @@
                             @*<input style="width: 370px;" type="text" class="form-control" placeholder="Search books..." name="search">*@
                             @Html.TextBox("txtSearch", "", htmlAttributes: new { @class = "form-control", @placeholder = "Search books...", @style = "width: 370px;background: #FAFAFA;border-radius: 40px;" })
                             <span class="input-group-btn">
-                                <button style="background: #e658588c; border-radius: 40px;" class="btn btn-default" type="submit">
+                                <button style="background: #FA8072; border-radius: 40px;" class="btn btn-default" type="submit">
                                     <span style="color:white">Search</span>
                                 </button>
                             </span>
@@ -93,7 +93,7 @@
         </div>  
         <!-- Footer -->
         <footer>
-            <div style="background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);border-radius: 39px 39px 0px 0px; " class="footer" id="footer">
+            <div style="background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);border-radius: 39px 39px 0px 0px; " class="footer" id="footer">
                 <div class="container">
                     
                     <div class="row">
@@ -148,10 +148,10 @@
                             <div class="footer-apps">
                                 @*<p class="intro hidden-lg hidden-md"></p>*@
                                 <a stype="height: 35px" rel="nofollow" href="https://play.google.com/apps" target="_blank">
-                                    <img style="height: 35px" alt="Get it on Google Play" class="lazy" src="https://vcdn.tikicdn.com/assets/img/google-play.svg?v=1" style="display: inline; background-image: none;">
+                                    <img style="height: 35px" alt="Get it on Google Play" class="lazy" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" style="display: inline; background-image: none;">
                                 </a>
                                 <a rel="nofollow" href="http://appstore.vn/home/" target="_blank">
-                                    <img style="height: 35px" class="lazy" src="https://vcdn.tikicdn.com/assets/img/app-store.svg?v=1" style="display: inline; background-image: none;">
+                                    <img style="height: 35px" class="lazy" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg" style="display: inline; background-image: none;">
                                 </a>
                                 <!-- <a href="https://mixpanel.com/f/partner" class=""><img style="padding-top: 5px;" src="/assets/img/badge_light.png" alt="Mobile Analytics"></a> -->
                             </div>
