--- a/Project8/Project8/Views/User/Register.cshtml
+++ b/Project8/Project8/Views/User/Register.cshtml
@@ -76,7 +76,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input style="background-color:#0094ff" type="submit" value="Register" class="btn btn-success" />
+                <input style="background-color:#90EE90" type="submit" value="Register" class="btn btn-success" />
             </div>
         </div>
     </div>
