--- a/Project8/Project8/Views/Book/DidYouSee.cshtml
+++ b/Project8/Project8/Views/Book/DidYouSee.cshtml
@@ -3,7 +3,7 @@
 @foreach (var item in Model)
 {
     <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
+        <div class="thumbnail" style="border-radius: 30px 30px 30px 30px">
             <a title="@item.BookName" href="/Book/Details/@item.BookID">
                 <img src="/images/@item.Image" alt="@item.Image" width="180" height="250" />
             </a>
