--- a/Project8/Project8/Views/User/Login.cshtml
+++ b/Project8/Project8/Views/User/Login.cshtml
@@ -28,7 +28,7 @@
                                         </label>
                                     </div>
                                     <div class="form-group">
-                                        <button style="background-color:#0094ff" type="submit" class="btn btn-success btn-block">Log in</button>
+                                        <button style="background-color:#90EE90" type="submit" class="btn btn-success btn-block">Log in</button>
                                     </div>
                                 }
                             </div>
