--- a/Project8/Project8/Views/Home/Index.cshtml
+++ b/Project8/Project8/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
         <hr />
         @*best selling book*@
         <div class="row">
-            <div style="position: absolute;width: 800px;height: 70px;left: 19px;top: 443px;background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);border-radius: 50px ;line-height: 2.1;">
+            <div style="position: absolute;width: 800px;height: 70px;left: 19px;top: 443px;background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);border-radius: 30px 30px 30px 30px ;line-height: 2.1;">
                 <div class="row">
                     <div class="col-lg-1" style="margin: 1rem 0rem 0rem 5rem">
                         <img style="width: 46px;height: 46px;left: 50px;top: 484px;" src="~/images/topSach.png"></img>
@@ -68,7 +68,7 @@
         @*Books in stock and see them all*@
         <hr />
         <h3><font style="color:#087BB0">Best selling book</font></h3>
-        <p style="text-align:right"><a href="/Book/ShowAllBook">View all</a></p>
+        <p style="text-align:right"><a href="/Book/ShowAllBook">View all books</a></p>
         <div class="row">
             @Html.Action("DidYouSee", "Book")
         </div>
