--- a/Project8/Project8/Views/Shared/_Layout.cshtml
+++ b/Project8/Project8/Views/Shared/_Layout.cshtml
@@ -138,10 +138,10 @@
                             </div>
                             <ul class="footer-social ">
                                 <li>
-                                    <a rel="nofollow" href="#" title="Youtube" target="_blank" style="color:#515252;font-size:1.6rem"><i class="fa fa-youtube-play"></i> Youtube</a>
+                                    <a rel="nofollow" href="https://www.youtube.com/" title="Youtube" target="_blank" style="color:#515252;font-size:1.6rem"><i class="fa fa-youtube-play"></i> Youtube</a>
                                 </li>
                                 <li>
-                                    <a rel="nofollow" href="https://www.facebook.com/groups/1966244086967556/" title="Facebook" target="_blank" style="color:#515252;font-size:1.6rem"><i class="fa fa-facebook-square"></i> Facebook</a>
+                                    <a rel="nofollow" href="https://www.facebook.com/" title="Facebook" target="_blank" style="color:#515252;font-size:1.6rem"><i class="fa fa-facebook-square"></i> Facebook</a>
                                 </li>
 
                             </ul>
