--- a/Project8/Project8/Views/Book/Details.cshtml
+++ b/Project8/Project8/Views/Book/Details.cshtml
@@ -37,7 +37,7 @@
 </div>
 
 <hr />
-<h3>Best selling book</h3>
+<h3><font style="color:#087BB0">Best selling book</font></h3>
 <div class="row">
     @Html.Action("FavoriteBook", "Book")
 </div>
