--- a/Project8/Project8/Areas/Admin/Views/Home/Order.cshtml
+++ b/Project8/Project8/Areas/Admin/Views/Home/Order.cshtml
@@ -57,9 +57,16 @@
     })
     </td>
     <td>
-        @Html.ActionLink("View", "DetailsOrder", new { id = item.OrderID })
+        @Html.ActionLink("View", "DetailsOrder", new { id = item.OrderID }) |
+        @Ajax.ActionLink("Delete", "DeleteOrder", new { id = item.OrderID }, new AjaxOptions
+        {
+            Confirm = "Do you want to delete this Order?",
+            OnComplete = "$('#row_" + @item.OrderID + "').remove()",
+            HttpMethod = "Delete"
+        })
     </td>
-</tr>}
+</tr>
+        }
     </tbody>
 
 
