--- a/Project8/Project8/Views/Home/Index.cshtml
+++ b/Project8/Project8/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-3" style="border-radius: 26px;border: 1px solid #dea3a3;   background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);">
-                <p style="text-align: center; margin: 5px;font-size: 25px;font-weight: 600;"><font style="color:#525151;"> Book category</font></p>
+                <p style="text-align: center; margin: 5px;font-size: 25px;font-weight: 600;"><font style="color:#525151;font-family:Times New Roman"> Book category</font></p>
                 @Html.Action("ShowCategory", "Home")
     </div>
     <div style="width:71%" class="col-md-9">
