--- a/Project8/Project8/Views/Home/SearchResult.cshtml
+++ b/Project8/Project8/Views/Home/SearchResult.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-3" style="border-radius: 26px;border: 1px solid #dea3a3;   background-image: linear-gradient(to top, #B0C4DE 0%, #ADD8E6 100%);">
-        <p style="text-align: center; margin: 5px;font-size: 25px;font-weight: 600;"><i aria-hidden="true"></i><font style="color:#525151; text-align:center"> Book category</font></p>
+        <p style="text-align: center; margin: 5px;font-size: 25px;font-weight: 600;"><i aria-hidden="true"></i><font style="color:#525151; text-align:center;font-family:Times New Roman"> Book category</font></p>
         @Html.Action("ShowCategory", "Home")
     </div>
     <div class="col-md-9">
