--- a/Project8/Project8/Areas/Admin/Views/Login/Index.cshtml
+++ b/Project8/Project8/Areas/Admin/Views/Login/Index.cshtml
@@ -37,10 +37,10 @@
             @Html.ValidationSummary(false, "", new { @class = "text-danger" });
             <fieldset>
                 <div class="form-group">
-                    @Html.TextBoxFor(model => model.Account, new { @class = "form-control", @autofocus = "autofocus" })
+                    @Html.TextBoxFor(model => model.Account, new { @class = "form-control", @autofocus = "autofocus", @placeholder = "Username" })
                 </div>
                 <div class="form-group">
-                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                    @Html.PasswordFor(model => model.Password, new { @class = "form-control", @placeholder = "Password" })
                 </div>
                 <!-- Change this to a button or input when using this as a form -->
                 <button type="submit" class="btn btn-lg btn-success btn-block">Log in</button>
